c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/extra_credit/prefix_decr_void_pointer.c
// Can't apply prefix or postfix ++/-- to pointers to void
void *malloc(unsigned long size);

int main(void) {
    void *buff = malloc(100);
    --buff;
    return 0;
}